--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
           <video controls loop muted class="w-100">
             <source src="videos/aggressive_sim_with_llm.mp4" type="video/mp4">
           </video>
-          <video controls loop muted class="w-100">
+<!--           <video controls loop muted class="w-100">
             <source src="path/to/aggressive_bev_after.mp4" type="video/mp4">
-          </video>
+          </video> -->
         </div>
       </div>
       <!-- Add more styles (Cautious, Distracted, AV) similarly -->
