--- a/index.html
+++ b/index.html
@@ -76,6 +76,15 @@
           </video>
         </div>
       </div>
+      <div class="col-md-12 highlight">
+        <h5>Cautious Style</h5>
+        <div class="image-grid">
+          <img src="path/to/aggressive_style.png" class="img-fluid" alt="Aggressive Driving Style">
+          <video controls loop muted class="w-100">
+            <source src="videos/aggressive_sim_with_llm.mp4" type="video/mp4">
+          </video>
+        </div>
+      </div>
       <!-- Add more styles (Cautious, Distracted, AV) similarly -->
     </div>
   </section>
