--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="image-grid">
           <img src="path/to/aggressive_style.png" class="img-fluid" alt="Aggressive Driving Style">
           <video controls loop muted class="w-100">
-            <source src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/aggressive_final_output_with_llm_compatible.mp4" type="video/mp4">
+            <source src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/aggressive_hstack_output.mp4" type="video/mp4">
           </video>
         </div>
       </div>
@@ -82,7 +82,7 @@
         <div class="image-grid">
           <img src="path/to/aggressive_style.png" class="img-fluid" alt="Aggressive Driving Style">
           <video controls loop muted class="w-100">
-            <source src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/cautious_final_output_with_llm_compatible.mp4" type="video/mp4">
+            <source src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/cautious_hstack_output.mp4" type="video/mp4">
           </video>
         </div>
       </div>
@@ -92,7 +92,7 @@
         <div class="image-grid">
           <img src="path/to/aggressive_style.png" class="img-fluid" alt="Aggressive Driving Style">
           <video controls loop muted class="w-100">
-            <source src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/tired_final_output_with_llm_compatible.mp4" type="video/mp4">
+            <source src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/tired_hstack_output.mp4" type="video/mp4">
           </video>
         </div>
       </div>
@@ -102,10 +102,10 @@
         <div class="image-grid">
           <img src="path/to/aggressive_style.png" class="img-fluid" alt="Aggressive Driving Style">
           <video controls loop muted class="w-100">
-            <source src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/tellhone_final_output_with_llm_compatible_1.mp4" type="video/mp4">
+            <source src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/tellhone_1_hstack_output.mp4" type="video/mp4">
           </video>
           <video controls loop muted class="w-100">
-            <source src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/tellhone_final_output_with_llm_compatible_2.mp4" type="video/mp4">
+            <source src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/tellhone_2_hstack_output.mp4" type="video/mp4">
           </video>
         </div>
       </div>
@@ -115,7 +115,7 @@
         <div class="image-grid">
           <img src="path/to/aggressive_style.png" class="img-fluid" alt="Aggressive Driving Style">
           <video controls loop muted class="w-100">
-            <source src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/drunk_final_output_with_llm_compatible.mp4" type="video/mp4">
+            <source src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/drunk_hstack_output.mp4" type="video/mp4">
           </video>
         </div>
       </div>
@@ -143,7 +143,7 @@
       <div class="col-md-12 highlight">
         <h5>Case 2: Fatigue-Induced Rear-End Collision</h5>
         <video controls loop muted class="w-100">
-          <source src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/CaseStudy_agg.png" type="video/mp4">
+          <source src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/CaseStudy_fai.png" type="video/mp4">
         </video>
         <p><strong>Description:</strong> Vehicle suddenly changed lanes causing a collision. <br>
            <strong>Prompt:</strong> "Change lanes aggressively ignoring traffic."</p>
@@ -154,7 +154,7 @@
       <div class="col-md-12 highlight">
         <h5>Case 3: Distracted Driving-Induced Side Collision</h5>
         <video controls loop muted class="w-100">
-          <source src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/CaseStudy_agg.png" type="video/mp4">
+          <source src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/CaseStudy_dis.png" type="video/mp4">
         </video>
         <p><strong>Description:</strong> Vehicle suddenly changed lanes causing a collision. <br>
            <strong>Prompt:</strong> "Change lanes aggressively ignoring traffic."</p>
@@ -163,20 +163,160 @@
   </section>
 
   <!-- API Effects -->
-  <section id="apis">
-    <h2 class="section-title">API Behavior Modifications</h2>
-    <div class="row">
-      <div class="col-md-12 highlight">
-        <h5>Following Distance API</h5>
-        <div class="image-grid">
-          <img src="path/to/following_distance_before.png" class="img-fluid" alt="Before API">
-          <img src="path/to/following_distance_after.png" class="img-fluid" alt="After API">
-        </div>
+<section id="apis">
+  <h2 class="section-title">API Behavior Modifications</h2>
+  <div class="row">
+
+    <!-- add_other_vehicle -->
+    <div class="col-md-12 highlight">
+      <h5>Add Other Vehicle</h5>
+      <div class="image-grid">
+        <img src="images/aa_tool_experiments/add_other_vehicle/origin_bev.png" class="img-fluid" alt="Origin BEV - Add Other Vehicle">
+        <img src="images/aa_tool_experiments/add_other_vehicle/impact_bev.png" class="img-fluid" alt="Impact BEV - Add Other Vehicle">
       </div>
     </div>
-  </section>
 
-  <!-- Real-Time LLM -->
+    <!-- add_stop_sign -->
+    <div class="col-md-12 highlight">
+      <h5>Add Stop Sign</h5>
+      <div class="image-grid">
+        <img src="images/aa_tool_experiments/add_stop_sign/origin_bev.png" class="img-fluid" alt="Origin BEV - Add Stop Sign">
+        <img src="images/aa_tool_experiments/add_stop_sign/impact_bev.png" class="img-fluid" alt="Impact BEV - Add Stop Sign">
+      </div>
+    </div>
+
+    <!-- add_traffic_light -->
+    <div class="col-md-12 highlight">
+      <h5>Add Traffic Light</h5>
+      <div class="image-grid">
+        <img src="images/aa_tool_experiments/add_traffic_light/origin_bev.png" class="img-fluid" alt="Origin BEV - Add Traffic Light">
+        <img src="images/aa_tool_experiments/add_traffic_light/impact_bev.png" class="img-fluid" alt="Impact BEV - Add Traffic Light">
+      </div>
+    </div>
+
+    <!-- impact_other_vehicle_distance -->
+    <div class="col-md-12 highlight">
+      <h5>Impact Other Vehicle Distance</h5>
+      <div class="image-grid">
+        <img src="images/aa_tool_experiments/impact_other_vehicle_distance/origin_bev.png" class="img-fluid" alt="Origin BEV - Other Vehicle Distance">
+        <img src="images/aa_tool_experiments/impact_other_vehicle_distance/impact_bev.png" class="img-fluid" alt="Impact BEV - Other Vehicle Distance">
+      </div>
+    </div>
+
+    <!-- impact_other_vehicle_heading -->
+    <div class="col-md-12 highlight">
+      <h5>Impact Other Vehicle Heading</h5>
+      <div class="image-grid">
+        <img src="images/aa_tool_experiments/impact_other_vehicle_heading/origin_bev.png" class="img-fluid" alt="Origin BEV - Other Vehicle Heading">
+        <img src="images/aa_tool_experiments/impact_other_vehicle_heading/impact_bev.png" class="img-fluid" alt="Impact BEV - Other Vehicle Heading">
+      </div>
+    </div>
+
+    <!-- impact_other_vehicle_size -->
+    <div class="col-md-12 highlight">
+      <h5>Impact Other Vehicle Size</h5>
+      <div class="image-grid">
+        <img src="images/aa_tool_experiments/impact_other_vehicle_size/origin_bev.png" class="img-fluid" alt="Origin BEV - Other Vehicle Size">
+        <img src="images/aa_tool_experiments/impact_other_vehicle_size/impact_bev.png" class="img-fluid" alt="Impact BEV - Other Vehicle Size">
+      </div>
+    </div>
+
+    <!-- impact_other_vehicle_speed -->
+    <div class="col-md-12 highlight">
+      <h5>Impact Other Vehicle Speed</h5>
+      <div class="image-grid">
+        <img src="images/aa_tool_experiments/impact_other_vehicle_speed/origin_bev.png" class="img-fluid" alt="Origin BEV - Other Vehicle Speed">
+        <img src="images/aa_tool_experiments/impact_other_vehicle_speed/impact_bev.png" class="img-fluid" alt="Impact BEV - Other Vehicle Speed">
+      </div>
+    </div>
+
+    <!-- impact_road_heading -->
+    <div class="col-md-12 highlight">
+      <h5>Impact Road Heading</h5>
+      <div class="image-grid">
+        <img src="images/aa_tool_experiments/impact_road_heading/origin_bev.png" class="img-fluid" alt="Origin BEV - Road Heading">
+        <img src="images/aa_tool_experiments/impact_road_heading/impact_bev.png" class="img-fluid" alt="Impact BEV - Road Heading">
+      </div>
+    </div>
+
+    <!-- impact_road_lane_width -->
+    <div class="col-md-12 highlight">
+      <h5>Impact Road Lane Width</h5>
+      <div class="image-grid">
+        <img src="images/aa_tool_experiments/impact_road_lane_width/origin_bev.png" class="img-fluid" alt="Origin BEV - Road Lane Width">
+        <img src="images/aa_tool_experiments/impact_road_lane_width/impact_bev.png" class="img-fluid" alt="Impact BEV - Road Lane Width">
+      </div>
+    </div>
+
+    <!-- impact_road_shape_to_curve -->
+    <div class="col-md-12 highlight">
+      <h5>Impact Road Shape to Curve</h5>
+      <div class="image-grid">
+        <img src="images/aa_tool_experiments/impact_road_shape_to_curve/origin_bev.png" class="img-fluid" alt="Origin BEV - Road Curve">
+        <img src="images/aa_tool_experiments/impact_road_shape_to_curve/impact_bev.png" class="img-fluid" alt="Impact BEV - Road Curve">
+      </div>
+    </div>
+
+    <!-- impact_stop_sign_distance -->
+    <div class="col-md-12 highlight">
+      <h5>Impact Stop Sign Distance</h5>
+      <div class="image-grid">
+        <img src="images/aa_tool_experiments/impact_stop_sign_distance/origin_bev.png" class="img-fluid" alt="Origin BEV - Stop Sign Distance">
+        <img src="images/aa_tool_experiments/impact_stop_sign_distance/impact_bev.png" class="img-fluid" alt="Impact BEV - Stop Sign Distance">
+      </div>
+    </div>
+
+    <!-- impact_stop_sign_size -->
+    <div class="col-md-12 highlight">
+      <h5>Impact Stop Sign Size</h5>
+      <div class="image-grid">
+        <img src="images/aa_tool_experiments/impact_stop_sign_size/origin_bev.png" class="img-fluid" alt="Origin BEV - Stop Sign Size">
+        <img src="images/aa_tool_experiments/impact_stop_sign_size/impact_bev.png" class="img-fluid" alt="Impact BEV - Stop Sign Size">
+      </div>
+    </div>
+
+    <!-- impact_traffic_light_distance -->
+    <div class="col-md-12 highlight">
+      <h5>Impact Traffic Light Distance</h5>
+      <div class="image-grid">
+        <img src="images/aa_tool_experiments/impact_traffic_light_distance/origin_bev.png" class="img-fluid" alt="Origin BEV - Traffic Light Distance">
+        <img src="images/aa_tool_experiments/impact_traffic_light_distance/impact_bev.png" class="img-fluid" alt="Impact BEV - Traffic Light Distance">
+      </div>
+    </div>
+
+    <!-- impact_traffic_light_size -->
+    <div class="col-md-12 highlight">
+      <h5>Impact Traffic Light Size</h5>
+      <div class="image-grid">
+        <img src="images/aa_tool_experiments/impact_traffic_light_size/origin_bev.png" class="img-fluid" alt="Origin BEV - Traffic Light Size">
+        <img src="images/aa_tool_experiments/impact_traffic_light_size/impact_bev.png" class="img-fluid" alt="Impact BEV - Traffic Light Size">
+      </div>
+    </div>
+
+    <!-- impact_traffic_light_status -->
+    <div class="col-md-12 highlight">
+      <h5>Impact Traffic Light Status</h5>
+      <div class="image-grid">
+        <img src="images/aa_tool_experiments/impact_traffic_light_status/origin_bev.png" class="img-fluid" alt="Origin BEV - Traffic Light Status">
+        <img src="images/aa_tool_experiments/impact_traffic_light_status/impact_bev.png" class="img-fluid" alt="Impact BEV - Traffic Light Status">
+      </div>
+    </div>
+
+    <!-- remove_lanes -->
+    <div class="col-md-12 highlight">
+      <h5>Remove Lanes</h5>
+      <div class="image-grid">
+        <img src="images/aa_tool_experiments/remove_lanes/origin_bev.png" class="img-fluid" alt="Origin BEV - Remove Lanes">
+        <img src="images/aa_tool_experiments/remove_lanes/impact_bev.png" class="img-fluid" alt="Impact BEV - Remove Lanes">
+      </div>
+    </div>
+
+  </div>
+</section>
+
+
+
+<!--   <!-- Real-Time LLM -->
   <section id="realtime">
     <h2 class="section-title">Real-Time LLM Reasoning Outputs</h2>
     <div class="video-grid">
@@ -189,7 +329,7 @@
     </div>
     <p class="text-center mt-3">Example prompts and outputs dynamically driving simulation behavior.</p>
   </section>
-
+ -->
   <footer>
     <p>© 2025 X-DriverSim Project | Paper: Coming Soon | GitHub Repo</p>
   </footer>
