--- a/index.html
+++ b/index.html
@@ -188,43 +188,105 @@
 
 
   <!-- API Effects -->
+<!-- API Effects -->
 <section id="apis" class="my-5">
-  <h2 class="section-title text-center">NEW API Behavior Modifications</h2>
-  <div class="row justify-content-center">
-    <!-- Add Other Vehicle -->
-    <div class="col-md-4 mb-4">
-      <div class="card shadow-sm border-light rounded">
-        <img src="images/aa_tool_experiments/add_other_vehicle/origin_bev.png" class="card-img-top" alt="Origin BEV - Add Other Vehicle">
+  <h2 class="section-title text-center mb-4">New API Behavior Modifications</h2>
+  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+
+    <!-- add_other_vehicle -->
+    <div class="col">
+      <div class="card shadow-sm rounded border-light">
         <div class="card-body">
-          <h5 class="card-title">Add Other Vehicle</h5>
-          <img src="images/aa_tool_experiments/add_other_vehicle/impact_bev.png" class="img-fluid" alt="Impact BEV - Add Other Vehicle">
+          <h5 class="card-title text-center">Add Other Vehicle</h5>
+          <div class="image-grid">
+            <img src="images/aa_tool_experiments/add_other_vehicle/origin_bev.png" class="img-fluid mb-2" alt="Origin BEV - Add Other Vehicle">
+            <img src="images/aa_tool_experiments/add_other_vehicle/impact_bev.png" class="img-fluid" alt="Impact BEV - Add Other Vehicle">
+          </div>
         </div>
       </div>
     </div>
 
-    <!-- Add Stop Sign -->
-    <div class="col-md-4 mb-4">
-      <div class="card shadow-sm border-light rounded">
-        <img src="images/aa_tool_experiments/add_stop_sign/origin_bev.png" class="card-img-top" alt="Origin BEV - Add Stop Sign">
+    <!-- add_stop_sign -->
+    <div class="col">
+      <div class="card shadow-sm rounded border-light">
         <div class="card-body">
-          <h5 class="card-title">Add Stop Sign</h5>
-          <img src="images/aa_tool_experiments/add_stop_sign/impact_bev.png" class="img-fluid" alt="Impact BEV - Add Stop Sign">
+          <h5 class="card-title text-center">Add Stop Sign</h5>
+          <div class="image-grid">
+            <img src="images/aa_tool_experiments/add_stop_sign/origin_bev.png" class="img-fluid mb-2" alt="Origin BEV - Add Stop Sign">
+            <img src="images/aa_tool_experiments/add_stop_sign/impact_bev.png" class="img-fluid" alt="Impact BEV - Add Stop Sign">
+          </div>
         </div>
       </div>
     </div>
 
-    <!-- Add Traffic Light -->
-    <div class="col-md-4 mb-4">
-      <div class="card shadow-sm border-light rounded">
-        <img src="images/aa_tool_experiments/add_traffic_light/origin_bev.png" class="card-img-top" alt="Origin BEV - Add Traffic Light">
+    <!-- add_traffic_light -->
+    <div class="col">
+      <div class="card shadow-sm rounded border-light">
         <div class="card-body">
-          <h5 class="card-title">Add Traffic Light</h5>
-          <img src="images/aa_tool_experiments/add_traffic_light/impact_bev.png" class="img-fluid" alt="Impact BEV - Add Traffic Light">
+          <h5 class="card-title text-center">Add Traffic Light</h5>
+          <div class="image-grid">
+            <img src="images/aa_tool_experiments/add_traffic_light/origin_bev.png" class="img-fluid mb-2" alt="Origin BEV - Add Traffic Light">
+            <img src="images/aa_tool_experiments/add_traffic_light/impact_bev.png" class="img-fluid" alt="Impact BEV - Add Traffic Light">
+          </div>
         </div>
       </div>
     </div>
+
+    <!-- impact_other_vehicle_distance -->
+    <div class="col">
+      <div class="card shadow-sm rounded border-light">
+        <div class="card-body">
+          <h5 class="card-title text-center">Impact Other Vehicle Distance</h5>
+          <div class="image-grid">
+            <img src="images/aa_tool_experiments/impact_other_vehicle_distance/origin_bev.png" class="img-fluid mb-2" alt="Origin BEV - Other Vehicle Distance">
+            <img src="images/aa_tool_experiments/impact_other_vehicle_distance/impact_bev.png" class="img-fluid" alt="Impact BEV - Other Vehicle Distance">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- impact_other_vehicle_heading -->
+    <div class="col">
+      <div class="card shadow-sm rounded border-light">
+        <div class="card-body">
+          <h5 class="card-title text-center">Impact Other Vehicle Heading</h5>
+          <div class="image-grid">
+            <img src="images/aa_tool_experiments/impact_other_vehicle_heading/origin_bev.png" class="img-fluid mb-2" alt="Origin BEV - Other Vehicle Heading">
+            <img src="images/aa_tool_experiments/impact_other_vehicle_heading/impact_bev.png" class="img-fluid" alt="Impact BEV - Other Vehicle Heading">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- impact_other_vehicle_size -->
+    <div class="col">
+      <div class="card shadow-sm rounded border-light">
+        <div class="card-body">
+          <h5 class="card-title text-center">Impact Other Vehicle Size</h5>
+          <div class="image-grid">
+            <img src="images/aa_tool_experiments/impact_other_vehicle_size/origin_bev.png" class="img-fluid mb-2" alt="Origin BEV - Other Vehicle Size">
+            <img src="images/aa_tool_experiments/impact_other_vehicle_size/impact_bev.png" class="img-fluid" alt="Impact BEV - Other Vehicle Size">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- impact_other_vehicle_speed -->
+    <div class="col">
+      <div class="card shadow-sm rounded border-light">
+        <div class="card-body">
+          <h5 class="card-title text-center">Impact Other Vehicle Speed</h5>
+          <div class="image-grid">
+            <img src="images/aa_tool_experiments/impact_other_vehicle_speed/origin_bev.png" class="img-fluid mb-2" alt="Origin BEV - Other Vehicle Speed">
+            <img src="images/aa_tool_experiments/impact_other_vehicle_speed/impact_bev.png" class="img-fluid" alt="Impact BEV - Other Vehicle Speed">
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 </section>
+
 
 
    <!-- API Effects -->
