--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
       <div class="card-body">
         <h5 class="card-title">Case 1: Aggressive Driving-Induced Collision</h5>
         <div class="image-container">
-          <img src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/CaseStudy_agg.png" alt="Aggressive Driving-Induced Collision" class="w-100 img-fluid mb-3">
+          <img src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/CaseStudy_agg.png" alt="Aggressive Driving-Induced Collision" style="width: 50%; height: 50%;" class="w-100 img-fluid mb-3">
         </div>
         <p><strong>Description:</strong> Vehicle suddenly changed lanes causing a collision.<br>
            <strong>Prompt:</strong> "Change lanes aggressively ignoring traffic."</p>
@@ -279,7 +279,7 @@
       <div class="card-body">
         <h5 class="card-title">Case 2: Fatigue-Induced Rear-End Collision</h5>
         <div class="image-container">
-          <img src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/CaseStudy_fai.png" alt="Fatigue-Induced Rear-End Collision" class="w-100 img-fluid mb-3">
+          <img src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/CaseStudy_fai.png" alt="Fatigue-Induced Rear-End Collision" style="width: 50%; height: 50%;" class="w-100 img-fluid mb-3">
         </div>
         <p><strong>Description:</strong> Vehicle suddenly changed lanes causing a collision.<br>
            <strong>Prompt:</strong> "Change lanes aggressively ignoring traffic."</p>
@@ -290,7 +290,7 @@
       <div class="card-body">
         <h5 class="card-title">Case 3: Distracted Driving-Induced Side Collision</h5>
         <div class="image-container">
-          <img src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/CaseStudy_dis.png" alt="Distracted Driving-Induced Side Collision" class="w-100 img-fluid mb-3">
+          <img src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/CaseStudy_dis.png" alt="Distracted Driving-Induced Side Collision" style="width: 50%; height: 50%;" class="w-100 img-fluid mb-3">
         </div>
         <p><strong>Description:</strong> Vehicle suddenly changed lanes causing a collision.<br>
            <strong>Prompt:</strong> "Change lanes aggressively ignoring traffic."</p>
