--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
     }
   
     .image-container img {
+      max-width: 80%; /* 设置图片最大宽度为容器宽度的80% */
+      height: auto;   /* 高度自动调整，保持宽高比 */
       border-radius: 8px;
       transition: transform 0.3s ease;
     }
