--- a/index.html
+++ b/index.html
@@ -263,8 +263,9 @@
 
     .api-card {
       width: 80%; /* Reduced card width for smaller cards */
-      max-width: 100px; /* 控制卡片最大宽度 */
+      max-width: 200px; /* 控制卡片最大宽度 */
       margin: 0 auto;    /* 居中卡片 */
+      height: 200px; /* 🔹 添加这一行设定固定高度 */
     }
 
     
@@ -339,7 +340,7 @@
     <!-- Framework Figure -->
     <div class="text-center mb-4">
       <h5><strong>Framework Overview</strong></h5>
-      <img src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/introduction_fig.png" alt="Framework Overview" class="img-fluid rounded shadow-sm" style="max-width: 100%; height: auto;">
+<!--       <img src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/introduction_fig.png" alt="Framework Overview" class="img-fluid rounded shadow-sm" style="max-width: 100%; height: auto;"> -->
       <img src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/framework_fig.png" alt="Framework Overview" class="img-fluid rounded shadow-sm" style="max-width: 100%; height: auto;">
       <p class="text-muted mt-2">Figure 1. X-DriverSim closed-loop simulation framework with LLM-driven behavior control and multimodal inputs.</p>
     </div>
@@ -347,8 +348,8 @@
     <!-- System Architecture -->
     <div class="text-center">
       <h5><strong>System Architecture</strong></h5>
-      <img src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/Stable_agents.png" alt="System Architecture Diagram" class="img-fluid rounded shadow-sm" style="max-width: 100%; height: auto;">
-      <img src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/Unstable_agents.png" alt="System Architecture Diagram" class="img-fluid rounded shadow-sm" style="max-width: 100%; height: auto;">
+      <img src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/Stable_agents.png" alt="System Architecture Diagram" class="img-fluid rounded shadow-sm" style="max-width: 47%; height: auto;">
+      <img src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/Unstable_agents.png" alt="System Architecture Diagram" class="img-fluid rounded shadow-sm" style="max-width: 47%; height: auto;">
       <p class="text-muted mt-2">Figure 2. Modular system architecture illustrating perception, behavior generation, simulation interaction, and evaluation modules.</p>
     </div>
   </section>
