--- a/index.html
+++ b/index.html
@@ -434,11 +434,11 @@
 
     <!-- Phone Style -->
     <div class="tab-pane fade" id="phone" role="tabpanel" aria-labelledby="phone-tab">
-      <div class="video-section">
-        <video controls loop muted class="w-100 mb-3">
+      <div class="video-section d-flex justify-content-between">
+        <video controls loop muted class="video-style mb-3">
           <source src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/tellphone_1_hstack_output.mp4" type="video/mp4">
         </video>
-        <video controls loop muted class="w-100 mb-3">
+        <video controls loop muted class="video-style mb-3">
           <source src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/tellphone_2_hstack_output.mp4" type="video/mp4">
         </video>
       </div>
