--- a/index.html
+++ b/index.html
@@ -347,13 +347,20 @@
     </div>
   
     <!-- Framework Figure -->
-    <div class="text-center mb-4">
-      <h5><strong>Framework Overview</strong></h5>
-<!--       <img src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/introduction_fig.png" alt="Framework Overview" class="img-fluid rounded shadow-sm" style="max-width: 100%; height: auto;"> -->
-      <img src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/framework_fig.png" alt="Framework Overview" class="img-fluid rounded shadow-sm" style="max-width: 100%; height: auto;">
-      <p class="text-muted mt-2">Figure 1. X-DriverSim closed-loop simulation framework with LLM-driven behavior control and multimodal inputs.</p>
+    <div class="row justify-content-center">
+      <div class="col-md-10 col-lg-8 text-center mb-4">
+        <h5><strong>Framework Overview</strong></h5>
+        <img 
+          src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/framework_fig.png" 
+          alt="Framework Overview" 
+          class="img-fluid rounded shadow-sm" 
+          style="max-width: 80%; height: auto;"> <!-- 👈 控制实际显示宽度 -->
+        <p class="text-muted mt-2">
+          Figure 1. X-DriverSim closed-loop simulation framework with LLM-driven behavior control and multimodal inputs.
+        </p>
+      </div>
     </div>
-  
+
     <!-- System Architecture -->
     <div class="text-center">
       <h5><strong>System Architecture</strong></h5>
