--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
           src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/framework_fig.png" 
           alt="Framework Overview" 
           class="img-fluid rounded shadow-sm" 
-          style="max-width: 80%; height: auto;"> <!-- 👈 控制实际显示宽度 -->
+          style="max-width: 100%; height: auto;"> <!-- 👈 控制实际显示宽度 -->
         <p class="text-muted mt-2">
           Figure 1. X-DriverSim closed-loop simulation framework with LLM-driven behavior control and multimodal inputs.
         </p>
@@ -514,36 +514,38 @@
     <table class="table table-bordered table-hover text-center">
       <thead class="table-light">
         <tr>
-          <th>Style Comb.</th>
-          <th>DS</th>
-          <th>RC</th>
-          <th>Style Comb.</th>
+          <th>Traffic Style(TS)</th>
+          <th>Driving Score(DS, Interfuser as AD Tested Model)</th>
+          <th>Route Completion(RC)</th>
+          <th>TS</th>
           <th>DS</th>
           <th>RC</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>No-No-No</td>
+          <td>Normal</td>
           <td>88.7</td>
           <td>100.0</td>
-          <td>Ag-No-No</td>
+          <td>Aggressive</td>
           <td>45.5</td>
           <td>100.0</td>
         </tr>
         <tr>
-          <td>Ca-No-No</td>
+          <td>Cautious</td>
           <td>78.1</td>
           <td>100.0</td>
-          <td>No-Dr-No</td>
+          
+          <td>Drunk</td>
           <td>47.7</td>
           <td>61.2</td>
         </tr>
         <tr>
-          <td>No-Fa-No</td>
+          <td>Fatigue</td>
           <td>61.9</td>
           <td>100.0</td>
-          <td>No-No-Di</td>
+          
+          <td>Distracted</td>
           <td>64.6</td>
           <td>100.0</td>
         </tr>
@@ -553,70 +555,41 @@
     <table class="table table-bordered table-hover text-center">
       <thead class="table-light">
         <tr>
-          <th>Style Comb.</th>
-          <th>DS</th>
-          <th>RC</th>
-          <th>Style Comb.</th>
-          <th>DS</th>
-          <th>RC</th>
+          <th>Traffic Style(TS)</th>
+          <th>Driving Score(DS, Interfuser as Tested AD Model)</th>
+          <th>Route Completion(RC)</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>No-Dr-Di</td>
-          <td>68.7</td>
-          <td>100</td>
-          <td>No-Fa-Di</td>
-          <td>40.0</td>
-          <td>89.0</td>
+          <td>Normal</td>
+          <td>88.7</td>
+          <td>100.0</td>
         </tr>
         <tr>
-          <td>Ag-Dr-No</td>
-          <td>35.3</td>
-          <td>100</td>
-          <td>Ca-Dr-No</td>
-          <td>85.3</td>
-          <td>100</td>
+          <td>Aggressive</td>
+          <td>45.5</td>
+          <td>100.0</td>
         </tr>
         <tr>
-          <td>Ag-Fa-No</td>
-          <td>62.7</td>
-          <td>100</td>
-          <td>Ca-Fa-No</td>
-          <td>63.0</td>
-          <td>94.3</td>
+          <td>Cautious</td>
+          <td>78.1</td>
+          <td>100.0</td>
         </tr>
         <tr>
-          <td>Ag-No-Di</td>
-          <td>37.3</td>
-          <td>86.1</td>
-          <td>Ca-No-Di</td>
-          <td>51.7</td>
-          <td>86.2</td>
+          <td>Fatigue</td>
+          <td>61.9</td>
+          <td>100.0</td>
         </tr>
-        <tr>
-          <td>Ag-Dr-Di</td>
-          <td>43.0</td>
-          <td>100</td>
-          <td>Ca-Dr-Di</td>
-          <td>75.9</td>
-          <td>100</td>
+        <tr>          
+          <td>Distracted</td>
+          <td>64.6</td>
+          <td>100.0</td>
         </tr>
-        <tr>
-          <td>Ag-Fa-Di</td>
-          <td>44.7</td>
-          <td>100</td>
-          <td>Ca-Fa-Di</td>
-          <td>53.3</td>
-          <td>94.6</td>
-        </tr>
-        <tr>
-          <td>Ag-Dr-Fa-No</td>
-          <td>58.1</td>
-          <td>100</td>
-          <td>Ag-Dr-Fa-Di</td>
-          <td>41.0</td>
-          <td>100</td>
+        <tr>        
+          <td>Drunk</td>
+          <td>47.7</td>
+          <td>61.2</td>
         </tr>
       </tbody>
     </table>
@@ -624,42 +597,11 @@
     <table class="table table-bordered table-hover text-center">
       <thead class="table-light">
         <tr>
-          <th>Comb. of Scenario</th>
-          <th>Num.</th>
-          <th>DS</th>
-          <th>RC</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Ag-Dr-No</td>
-          <td>10</td>
-          <td>43.1</td>
-          <td>87.3</td>
-        </tr>
-        <tr>
-          <td>Ca-No-Di</td>
-          <td>10</td>
-          <td>43.1</td>
-          <td>87.3</td>
-        </tr>
-        <tr>
-          <td>No-Fa-Di</td>
-          <td>10</td>
-          <td>43.1</td>
-          <td>87.3</td>
-        </tr>
-      </tbody>
-    </table>
-
-      <table class="table table-bordered table-hover text-center">
-      <thead class="table-light">
-        <tr>
-          <th>AD Model</th>
-          <th>Normal</th>
-          <th>Aggressive</th>
-          <th>Multi</th>
-          <th>Mixed</th>
+          <th>Tested AD Model</th>
+          <th>TS=Normal(DS, RC)</th>
+          <th>TS=Aggressive(DS, RC)</th>
+          <th>TS=Multi(DS, RC)</th>
+          <th>TS=Mixed(DS, RC)</th>
         </tr>
       </thead>
       <tbody>
@@ -769,7 +711,7 @@
         src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/Trajectory_validation.png" 
         alt="Framework Overview" 
         class="img-fluid rounded shadow-sm" 
-        style="max-width: 70%; height: auto;"> <!-- 👈 控制实际显示宽度 -->
+        style="max-width: 90%; height: auto;"> <!-- 👈 控制实际显示宽度 -->
       <p class="text-muted mt-2">
         Figure 1. X-DriverSim closed-loop simulation framework with LLM-driven behavior control and multimodal inputs.
       </p>
@@ -777,8 +719,6 @@
   </div>
 
 </section>
-
-
 
 
   <!-- API Effects -->
