--- a/index.html
+++ b/index.html
@@ -366,18 +366,10 @@
     </div>
   
     <!-- Framework Figure -->
-    <div class="row justify-content-center">
-      <div class="col-md-10 col-lg-8 text-center mb-4">
-        <h5><strong>Framework Overview</strong></h5>
-        <img 
-          src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/framework_fig.png" 
-          alt="Framework Overview" 
-          class="img-fluid rounded shadow-sm" 
-          style="max-width: 100%; height: auto;"> <!-- 👈 控制实际显示宽度 -->
-        <p class="text-muted mt-2">
-          Figure 1. X-DriverSim closed-loop simulation framework with LLM-driven behavior control and multimodal inputs.
-        </p>
-      </div>
+    <div class="text-center mb-4">
+      <h5><strong>Framework Overview</strong></h5>
+      <img src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/framework_fig.png" alt="Framework Overview" class="img-fluid rounded shadow-sm" style="max-width: 100%; height: auto;">
+      <p class="text-muted mt-2">Figure 1. X-DriverSim closed-loop simulation framework with LLM-driven behavior control and multimodal inputs.</p>
     </div>
 
     <!-- System Architecture -->
@@ -495,7 +487,7 @@
     <!-- Case 1 -->
     <div class="accident-card card shadow-sm border-light rounded">
       <div class="card-body">
-        <div class="accident-card-title">Case 1: Aggressive Driving-Induced Collision</h5>
+        <h5 class="card-title">Case 1: Aggressive Driving-Induced Collision</h5>
         <img src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/CaseStudy_agg.png" alt="Aggressive Driving-Induced Collision" class="img-fluid mb-3 accident-img">
         <p><strong>Description:</strong> Vehicle suddenly changed lanes causing a collision.<br>
           <strong>Prompt:</strong> "Change lanes aggressively ignoring traffic."</p>
@@ -505,7 +497,7 @@
     <!-- Case 2 -->
     <div class="accident-card card shadow-sm border-light rounded">
       <div class="card-body">
-        <div class="accident-card-title">Case 2: Fatigue-Induced Rear-End Collision</h5>
+        <h5 class="card-title">Case 2: Fatigue-Induced Rear-End Collision</h5>
         <img src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/CaseStudy_fai.png" alt="Fatigue-Induced Rear-End Collision" class="img-fluid mb-3 accident-img">
         <p><strong>Description:</strong> Driver failed to brake in time.<br>
           <strong>Prompt:</strong> "Drive while tired and unresponsive."</p>
@@ -515,7 +507,7 @@
     <!-- Case 3 -->
     <div class="accident-card card shadow-sm border-light rounded">
       <div class="card-body">
-        <div class="accident-card-title">Case 3: Distracted Driving-Induced Side Collision</h5>
+        <h5 class="card-title">Case 3: Distracted Driving-Induced Side Collision</h5>
         <img src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/CaseStudy_dis.png" alt="Distracted Driving-Induced Side Collision" class="img-fluid mb-3 accident-img">
         <p><strong>Description:</strong> Driver veered into another lane.<br>
           <strong>Prompt:</strong> "Check phone while driving."</p>
