--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     .img-front {
       z-index: 2; /* Ensure it is on top */
       opacity: 1;
-      transform: translate(-50%, -50%) translate(10px, 10px); /* Slight shift right and down */
+/*       transform: translate(-50%, -50%) translate(10px, 10px); /* Slight shift right and down */ */
 /*       top: 5px;  /* Slight shift down */ */
 /*       left: 8px; /* Slight shift right */ */
     }
@@ -260,7 +260,7 @@
     .img-back {
       z-index: 1;
       opacity: 0.2;
-      transform: translate(-50%, -50%) translate(-10px, -10px); /* Slight shift left and up */
+/*       transform: translate(-50%, -50%) translate(-10px, -10px); /* Slight shift left and up */ */
       /* Slight shift down and to the right for the second layer */
 /*       top: -5px;  /* Move up slightly */ */
 /*       left: -8px; /* Move left slightly */ */
@@ -371,7 +371,7 @@
     <!-- Framework Figure -->
     <div class="text-center mb-4">
       <h5><strong>Framework Overview</strong></h5>
-      <img src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/framework_fig.png" alt="Framework Overview" class="img-fluid rounded shadow-sm" style="max-width: 80%; height: auto;">
+      <img src="https://github.com/anoymousauthor-xdriver/anoymousauthor-xdriver.github.io/releases/download/v1.0/framework_fig.png" alt="Framework Overview" class="img-fluid rounded shadow-sm" style="max-width: 90%; height: auto;">
       <p class="text-muted mt-2">Figure 1. X-DriverSim closed-loop simulation framework with LLM-driven behavior control and multimodal inputs.</p>
     </div>
 
@@ -523,13 +523,13 @@
 <section id="quant-results" class="my-5" data-aos="fade-up">
   <h2 class="section-title text-center">Quantitative Results</h2>
   <p class="text-center">We present the numerical evaluation of different driver behavior models across standard metrics. 
-    Traffic Style(TS), Driving Score(DS, Interfuser as AD Tested Model), Route Completion(RC), Tested AD Model(TAD)</p>
+    Traffic Style(TS), Driving Score(DS, Interfuser as AD Tested Model), Route Completion(RC). </p>
   
   <div class="table-responsive">
     <table class="table table-bordered table-hover text-center">
       <thead class="table-light">
         <tr>
-          <th>Traffic Style(TS)</th>
+          <th>TS</th>
           <th>DS (Interfuser as Tested AD Model)</th>
           <th>RC</th>
           <th>TS</th>
