--- a/index.html
+++ b/index.html
@@ -524,14 +524,14 @@
     Traffic Style(TS), Driving Score(DS, Interfuser as AD Tested Model), Route Completion(RC). </p>
   
   <div class="table-responsive">
-    <table class="table table-bordered table-hover text-center">
+    <table class="table table-bordered table-hover text-center"  style="width: 80%; max-width: 1000px;">
       <thead class="table-light">
         <tr>
           <th>TS</th>
-          <th style="width: 10%;">DS (Interfuser as Tested AD Model)</th>
+          <th>DS (Interfuser as Tested AD Model)</th>
           <th>RC</th>
           <th>TS</th>
-          <th style="width: 10%;">DS (Interfuser as Tested AD Model)</th>
+          <th>DS (Interfuser as Tested AD Model)</th>
           <th>RC</th>
         </tr>
       </thead>
@@ -635,10 +635,10 @@
       <thead class="table-light">
         <tr>
           <th>TS</th>
-          <th style="width: 10%;">Tested AD Model</th>
+          <th>Tested AD Model</th>
           <th>DS</th>
           <th>RC</th>
-          <th style="width: 10%;">Tested AD Model</th>
+          <th>Tested AD Model</th>
           <th>DS</th>
           <th>RC</th>
         </tr>
