--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
     .img-back {
       z-index: 1;
       opacity: 0.2;
+      transform: translate(-50%, -50%) translate(-10px, -10px); /* 左上偏移 */
 /*       transform: translate(-50%, -50%) translate(-10px, -10px); /* Slight shift left and up */ */
       /* Slight shift down and to the right for the second layer */
 /*       top: -5px;  /* Move up slightly */ */
