--- a/index.html
+++ b/index.html
@@ -817,21 +817,13 @@
     </div>
 
 
-    <!-- About stop sign -->
-    <div class="container">
-      <!-- Stop Sign Section -->
-      <div class="section-title">
-        <hr>
-        <h3>Stop Sign API</h3>
-        <hr>
-    </div>
-
     <!-- 大卡片容器 -->
-<!--     <div class="api-card-container row"> -->
-    <div class="card shadow-sm rounded p-4 mb-5" style="background-color: lightgray;">
+    <hr>
+    <div class="card shadow-sm rounded p-4 mb-5 mx-auto" style="background-color: #f7f7f7; width: 90%; max-width: 1200px;">
     <h5 class="text-center mb-4">Stop Sign API</h5>
 
-    <div class="row justify-content-center">
+<!--     <div class="row justify-content-center"> -->
+    <div class="d-flex flex-wrap justify-content-center gap-4">
       
     <!-- Impact Stop Sign Distance -->
       <div class="col-md-4 mb-4">
